force-app/main/default/objects/SFDC_Script_Result__c/SFDC_Script_Result__c.object-meta.xml
<CustomObject>
    <description>Stored detailed question-answer results for a given call script occurrence</description>
    <label>Script Result</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Script Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>