force-app/main/default/objects/SFDC_Script_Result__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>The answer to the question.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>