force-app/main/default/objects/SFDC_Script_Result__c/fields/Help__c.field-meta.xml
<CustomField>
    <fullName>Help__c</fullName>
    <formula>(HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01560000000KA50&quot;, &quot;Help for Scripts&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Help for Scripts</label>
    <type>Text</type>
</CustomField>