force-app/main/default/objects/SFDC_Script_Result__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>The question asked.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Question</label>
    <length>80</length>
    <type>Text</type>
</CustomField>